--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -260,28 +260,33 @@ ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robust
 [AssetService]
 
 ;; Choose an asset service (Only one option should be enabled)
-LocalServiceModule="OpenSim.Services.AssetService.dll:AssetService"
+LocalServiceModule=OpenSim.Services.FSAssetService.dll:FSAssetConnector
 
 ;LocalServiceModule="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 ;; FSAsset Directories. Base directory, where final asset files are stored and Spool directory for temp files
 ;; These directories must be on the same physical filesystem
-;BaseDirectory="./fsassets/data"
-;SpoolDirectory="./fsassets/tmp"
+BaseDirectory=./fsassets/data
+SpoolDirectory=./fsassets/tmp
+
 ;; Original service can be checked if FSAssets can not find an asset
-;FallbackService="OpenSim.Services.AssetService.dll:AssetService";
+FallbackService=OpenSim.Services.AssetService.dll:AssetService
+
 ;; How many days since last updating the access time before its updated again by FSAssets when accessing an asset
 ;; Reduces DB calls if asset is requested often. Default value 0 will always update access time
-;DaysBetweenAccessTimeUpdates=30
+DaysBetweenAccessTimeUpdates=30
+
 ;; Should FSAssets print read/write stats to the robust console, default is true
-;ShowConsoleStats=true
+ShowConsoleStats=true
+
 ;; FSAssets Custom Database Config (Leave blank to use grids default database configuration)
-;StorageProvider = ""
-;ConnectionString = ""
-;Realm = "fsassets"
+StorageProvider=
+ConnectionString=
+Realm=fsassets
+
 ;; The following are common to both the default asset service and FSAsset service
 ;; Common asset service options
 DefaultAssetLoader="OpenSim.Framework.AssetLoader.Filesystem.dll"
-AssetLoaderArgs="./assets/AssetSets.xml"
+AssetLoaderArgs=./assets/AssetSets.xml
 
 ; Allow maptile assets to remotely deleted by remote calls to the asset service.
 ; There is no harm in having this as false - it just means that historical maptile assets are not deleted.
@@ -326,7 +331,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_Welcome="DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_Outworldztest2="DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
