--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,11 +30,11 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://mach.outworldz.net
+BaseURL=http://10.6.1.103
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.135
+PrivURL=http://10.6.1.103
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
@@ -260,12 +260,12 @@ ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robust
 [AssetService]
 
 ;; Choose an asset service (Only one option should be enabled)
-LocalServiceModule=OpenSim.Services.FSAssetService.dll:FSAssetConnector
+LocalServiceModule=OpenSim.Services.AssetService.dll:AssetService
 
 ;LocalServiceModule="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 ;; FSAsset Directories. Base directory, where final asset files are stored and Spool directory for temp files
 ;; These directories must be on the same physical filesystem
-BaseDirectory=./fsassets/data
+BaseDirectory=C:\tmp\fsassets
 SpoolDirectory=./fsassets/tmp
 
 ;; Original service can be checked if FSAssets can not find an asset
@@ -276,11 +276,11 @@ FallbackService=OpenSim.Services.AssetService.dll:AssetService
 DaysBetweenAccessTimeUpdates=30
 
 ;; Should FSAssets print read/write stats to the robust console, default is true
-ShowConsoleStats=true
+ShowConsoleStats=True
 
 ;; FSAssets Custom Database Config (Leave blank to use grids default database configuration)
-StorageProvider=
-ConnectionString=
+;StorageProvider=
+;ConnectionString=
 Realm=fsassets
 
 ;; The following are common to both the default asset service and FSAsset service
@@ -331,7 +331,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_Outworldztest2="DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_AlphaCentauriTrek="DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
@@ -758,7 +758,7 @@ AuthType=None
 [HGAssetService]
 
 ;; Use the second option if you have FSAsset service enabled
-LocalServiceModule="OpenSim.Services.HypergridService.dll:HGAssetService"
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGAssetService
 
 ;LocalServiceModule = "OpenSim.Services.HypergridService.dll:HGFSAssetService"
 UserAccountsService="OpenSim.Services.UserAccountService.dll:UserAccountService"
@@ -839,7 +839,7 @@ LocalServiceModule="OpenSim.Services.MuteListService.dll:MuteListService"
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=Gmail for notification
+SMTP_SERVER_LOGIN=
 SMTP_SERVER_PASSWORD=Gmail password
 
 ; Automatically changed by Dreamworld - do not change this - Should be True ( case sensitive)
