--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -37,7 +37,7 @@
 
 
 # changed by Dreamgrid
-Define SRVROOT "O:/Opensim/Outworldz DreamGrid Master/Outworldzfiles/Apache"
+Define SRVROOT "C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache"
 ServerRoot "${SRVROOT}"
 
 #
@@ -103,7 +103,6 @@ LoadModule authz_host_module modules/mod_authz_host.so
 #LoadModule authz_owner_module modules/mod_authz_owner.so
 LoadModule authz_user_module modules/mod_authz_user.so
 LoadModule autoindex_module modules/mod_autoindex.so
-#LoadModule brotli_module modules/mod_brotli.so
 #LoadModule buffer_module modules/mod_buffer.so
 #LoadModule cache_module modules/mod_cache.so
 #LoadModule cache_disk_module modules/mod_cache_disk.so
@@ -134,7 +133,6 @@ LoadModule include_module modules/mod_include.so
 #LoadModule info_module modules/mod_info.so
 #LoadModule isapi_module modules/mod_isapi.so
 #LoadModule lbmethod_bybusyness_module modules/mod_lbmethod_bybusyness.so
-#LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
 #LoadModule lbmethod_bytraffic_module modules/mod_lbmethod_bytraffic.so
 #LoadModule lbmethod_heartbeat_module modules/mod_lbmethod_heartbeat.so
 #LoadModule ldap_module modules/mod_ldap.so
@@ -144,7 +142,6 @@ LoadModule log_config_module modules/mod_log_config.so
 #LoadModule log_forensic_module modules/mod_log_forensic.so
 #LoadModule lua_module modules/mod_lua.so
 LoadModule macro_module modules/mod_macro.so
-#LoadModule md_module modules/mod_md.so
 LoadModule mime_module modules/mod_mime.so
 LoadModule mime_magic_module modules/mod_mime_magic.so
 LoadModule negotiation_module modules/mod_negotiation.so
@@ -156,7 +153,6 @@ LoadModule negotiation_module modules/mod_negotiation.so
 #LoadModule proxy_express_module modules/mod_proxy_express.so
 #LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 #LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
-#LoadModule proxy_hcheck_module modules/mod_proxy_hcheck.so
 #LoadModule proxy_html_module modules/mod_proxy_html.so
 #LoadModule proxy_http_module modules/mod_proxy_http.so
 #LoadModule proxy_http2_module modules/mod_proxy_http2.so
@@ -193,25 +189,20 @@ LoadModule version_module modules/mod_version.so
 #LoadModule watchdog_module modules/mod_watchdog.so
 #LoadModule xml2enc_module modules/mod_xml2enc.so
 
-# streaming video for mp4
-LoadModule h264_streaming_module modules/mod_h264_streaming.so
-<IfModule h264_streaming_module>
-AddHandler h264-streaming.extensions .mp4	
-</IfModule>
 
 # SSL/TLS Certificates
 # uncomment for HTTPS(SSL/TLS). You need to put certs in extras\Certs
 #LoadModule ssl_module modules/mod_ssl.so
 
 #PHP
-LoadModule php7_module "O:/Opensim/Outworldz DreamGrid Master/Outworldzfiles/PHP7/php7apache2_4.dll"
+LoadModule php7_module "C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/PHP7/php7apache2_4.dll"
 <FilesMatch \.php$>
       SetHandler application/x-httpd-php
 </FilesMatch>
 
 # configure the path to php.ini
 # changed by Dreamgrid
-PHPIniDir "O:/Opensim/Outworldz DreamGrid Master/Outworldzfiles/PHP7"
+PHPIniDir "C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/PHP7"
 
 
 <IfModule unixd_module>
@@ -254,7 +245,7 @@ ServerAdmin email@somewhere.com
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 # changed by Dreamgrid
-ServerName 192.168.2.100
+ServerName 192.168.2.139
 
 # This fixes a bug with the OS
 AcceptFilter http none
@@ -277,14 +268,13 @@ AcceptFilter https none
 # you might expect, make sure that you have specifically enabled it
 # below.
 #
-
 #
 # DocumentRoot: The directory out of which you will serve your
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
 # changed by Dreamgrid
-DocumentRoot "O:/Opensim/Outworldz DreamGrid Master/Outworldzfiles/Apache/htdocs"
+DocumentRoot "C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
 
 
 <Macro VDir $root>
@@ -324,7 +314,7 @@ Require all granted
 
 # must be flush aligned left
 # changed by Dreamgrid
-Use VDir "O:/Opensim/Outworldz DreamGrid Master/Outworldzfiles/Apache/htdocs"
+Use VDir "C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
 
 
 <VirtualHost  *:80>
@@ -340,7 +330,7 @@ DirectoryIndex  index.php index.htm index.html default.htm
 
 # must be flush aligned left
 # changed by Dreamgrid
-ServerName 192.168.2.100
+ServerName 192.168.2.139
 
 # in case you want a different URL for your servers Web site yet still have Apache on.
 #Redirect permanent / https://google.com
@@ -380,7 +370,7 @@ LogLevel warn
 
 # changed by Dreamgrid
 # must be flush aligned left
-ErrorLog "|bin/rotatelogs.exe  -l \"O:/Opensim/Outworldz DreamGrid Master/Outworldzfiles/Apache/logs/Error-%Y-%m-%d.log\" 86400"
+ErrorLog "|bin/rotatelogs.exe  -l \"C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/logs/Error-%Y-%m-%d.log\" 86400"
  
     #
     # The location and format of the access logfile (Common Logfile Format).
@@ -391,7 +381,7 @@ ErrorLog "|bin/rotatelogs.exe  -l \"O:/Opensim/Outworldz DreamGrid Master/Outwor
     #
 # must be flush aligned left
 # changed by Dreamgrid
-CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz DreamGrid Master/Outworldzfiles/Apache/logs/access-%Y-%m-%d.log\" 86400" common env=!dontlog
+CustomLog "|bin/rotatelogs.exe -l \"C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/logs/access-%Y-%m-%d.log\" 86400" common env=!dontlog
 
 
     #
@@ -450,14 +440,6 @@ CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz DreamGrid Master/Outwor
 #    Options None
 #    Require all granted
 #</Directory>
-<IfModule headers_module>
-    #
-    # Avoid passing HTTP_PROXY environment to CGI's on this or any proxied
-    # backend servers which have lingering "httpoxy" defects.
-    # 'Proxy' request header is undefined by the IETF, not listed by IANA
-    #
-    RequestHeader unset Proxy early
-</IfModule>
 
 <IfModule mime_module>
     #
@@ -521,9 +503,8 @@ MIMEMagicFile conf/magic
 # Customizable error responses come in three flavors:
 # 1) plain text 2) local redirects 3) external redirects
 #
-# Some examples:
 #ErrorDocument 500 "The server made a boo boo."
-#ErrorDocument 404 /missing.html
+#ErrorDocument 404 "oops"
 ErrorDocument 404 /DreamGrid/error404.htm
 
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
@@ -588,12 +569,10 @@ Include conf/extra/httpd-autoindex.conf
 #Include conf/extra/httpd-default.conf
 
 # Configure mod_proxy_html to understand HTML4/XHTML1
-<IfModule proxy_html_module>
-Include conf/extra/proxy-html.conf
-</IfModule>
+#<IfModule proxy_html_module>
+#Include conf/extra/proxy-html.conf
+#</IfModule>
 
-# Secure (SSL/TLS) connections
-#Include conf/extra/httpd-ssl.conf
 #
 # Note: The following must must be present to support
 #       starting without SSL on platforms with no /dev/random equivalent
