--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -1,42 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.13.0" targetFramework="net472" />
+  <package id="BuildTools.FxCop" version="1.0.1" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.14.0" targetFramework="net472" />
   <package id="Humanizer.Core" version="2.8.26" targetFramework="net472" />
   <package id="ini-parser" version="2.5.2" targetFramework="net461" />
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis" version="3.7.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis" version="3.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.1" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="3.7.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="3.7.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.7.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.7.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.7.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.7.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Compilers" version="3.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.3.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.3.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="3.3.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers.Toolset" version="3.8.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="3.3.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="3.3.1" targetFramework="net472" developmentDependency="true" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net46" />
-  <package id="MySql.Data" version="8.0.21" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
-  <package id="System.Composition" version="1.4.1" targetFramework="net472" />
-  <package id="System.Composition.AttributedModel" version="1.4.1" targetFramework="net472" />
-  <package id="System.Composition.Convention" version="1.4.1" targetFramework="net472" />
-  <package id="System.Composition.Hosting" version="1.4.1" targetFramework="net472" />
-  <package id="System.Composition.Runtime" version="1.4.1" targetFramework="net472" />
-  <package id="System.Composition.TypedParts" version="1.4.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net472" />
+  <package id="System.Composition" version="5.0.0" targetFramework="net472" />
+  <package id="System.Composition.AttributedModel" version="5.0.0" targetFramework="net472" />
+  <package id="System.Composition.Convention" version="5.0.0" targetFramework="net472" />
+  <package id="System.Composition.Hosting" version="5.0.0" targetFramework="net472" />
+  <package id="System.Composition.Runtime" version="5.0.0" targetFramework="net472" />
+  <package id="System.Composition.TypedParts" version="5.0.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Reflection.Metadata" version="1.8.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
-  <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
-  <package id="Ubiety.Dns.Core" version="4.2.0" targetFramework="net472" />
-  <package id="Ubiety.Logging.Core" version="1.2.2" targetFramework="net472" />
 </packages>
